testing/tests/ui/loop_cycle_empty.stderr
error: the previous template error derives from
 --> tests/ui/loop_cycle_empty.rs:5:5
  |
5 |     source = r#"{% for v in values %}{{ loop.cycle([]) }}{{ v }},{% endfor %}"#,
  |     ^^^^^^
